@@ -1,3 +1,8 @@
+(29/12/14)
+==========
+
+· Update Tweaks > other & removepkg scripts. 
+
 (08/12/14)
 ==========
 
